#436c: Fix Body Scroll
- Added scroll to Main Component
- Hide scrollbar
- Added margin to show footer content in mobile

--- a/src/app/core/layout/footer/footer.component.scss
+++ b/src/app/core/layout/footer/footer.component.scss
@@ -2,3 +2,9 @@
   font-size: 10px;
   margin-right: 0.8rem;
 }
+
+@media screen and (max-width: 768px) {
+  .version {
+  margin-top: -33px;
+}
+}
