--- a/src/app/core/layout/main/main.component.scss
+++ b/src/app/core/layout/main/main.component.scss
@@ -41,6 +41,10 @@
   app-main-menu {
     height: 100%;
   }
+  #main-container {
+    overflow: auto;
+    scrollbar-width: none;
+  }
 }
 
 .logo {
@@ -50,8 +54,7 @@
 
 @media screen and (max-width: 768px) {
   .container-fluid {
-    padding: 30px 0px;
-    background-color: white;
+    padding: 30px 0px 0px;
 
     main {
       padding: 20px;
